# Pipecat-Arabic-Agent-Sara

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  agent.py  pyproject.toml  requirements.txt
